Some changes to meet my needs
Changes:
added HTTP User Agent to logging
added SQL for show only user logs,
added preset for default ordering
added send mail only for user downloads
fixed pagination and removed unused columns

--- a/language/en-GB/en-GB.com_phocadownload.ini
+++ b/language/en-GB/en-GB.com_phocadownload.ini
@@ -9,6 +9,9 @@
 ; @test utf-8 ä, ö, ü
 ;
 
+;[3.0.6.am]
+COM_PHOCADOWNLOAD_HUA="HTTP User Agent String"
+
 ;[3.0.6]
 COM_PHOCADOWNLOAD_FILENAME_ASC="File Name Ascending"
 COM_PHOCADOWNLOAD_FILENAME_DESC="File Name Descending"
@@ -622,7 +625,7 @@ COM_PHOCADOWNLOAD_GROUP_LABEL_PUBLISHING_DETAILS="Publishing Details"
 COM_PHOCADOWNLOAD_GUEST="Guest"
 COM_PHOCADOWNLOAD_HELP="Help"
 COM_PHOCADOWNLOAD_HITS="Hits"
-COM_PHOCADOWNLOAD_ID="ID"
+COM_PHOCADOWNLOAD_ID="IxD"
 COM_PHOCADOWNLOAD_ID_ASC="ID Ascending"
 COM_PHOCADOWNLOAD_ID_DESC="ID Descending"
 COM_PHOCADOWNLOAD_INFO="Info"
