--- a/language/en-GB/en-GB.com_phocadownload.sys.ini
+++ b/language/en-GB/en-GB.com_phocadownload.sys.ini
@@ -9,6 +9,14 @@
 ; @test utf-8 ä, ö, ü
 ;
 
+;[3.0.6.am]
+COM_PHOCADOWNLOAD_FIELD_DISABLE_ANONYMOUS_LOGGING_LABEL="Disable anonymous logging"
+COM_PHOCADOWNLOAD_FIELD_DISABLE_ANONYMOUS_LOGGING_DESC="Disable logging of anonymous access"
+COM_PHOCADOWNLOAD_FIELD_SHOW_ONLY_USER_LOGS_LABEL="Show only registered users"
+COM_PHOCADOWNLOAD_FIELD_SHOW_ONLY_USER_LOGS_DESC="Show only logging for registered users"
+COM_PHOCADOWNLOAD_FIELD_SEND_EMAIL_ONLY_USER_DOWNLOAD_LABEL="Emails only for registerd users"
+COM_PHOCADOWNLOAD_FIELD_SEND_EMAIL_ONLY_USER_DOWNLOAD_DESC="Disable sending emails for downloads of anonymous users"
+
 ;[3.0.2]
 COM_PHOCADOWNLOAD_DOWNLOAD_LAYOUT="Download View"
 COM_PHOCADOWNLOAD_DOWNLOAD_LAYOUT_DESC="This view displays link of file to download (File which is accessible by unique download URL)"
